<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jotaayou Mouride</string>
    <string name="name">Nom complet</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Telephone (9 chiffres)</string>
    <string name="address">Adresse</string>
    <string name="mdp">Mot de passe</string>
    <string name="confimerMdp" tools:ignore="ExtraTranslation">Confirmer votre de passe</string>
    <string name="registeredAlready">Vous avez deja un compte? Cliquez ici pour vous connecter</string>
    <string name="camera">Choisir une photo de profile</string>
    <string name="verifyEmail">Pour continuer, cliquez sur le bouton ci-dessous recevoir un email de verification et suivez les instructions.</string>
    <string name="commission">Commission</string>
    <string name="admin">Administrateur</string>
    <string name="simpleMember">Membre simple</string>
    <string name="dahiraName">Nom du dahira</string>
    <string name="siege">Siege du dahira</string>
    <string name="addCommission">Ajouter cette commission</string>
    <string name="responsible">Responsable</string>
    <string name="createDahira">Vous n\'avez pas encore de compte? Cliquez ici pour s\'inscrire</string>
    <string name="update">Enregistrer mes changements</string>
    <string name="delete">Supprimer ce membre</string>
    <string name="finish">Terminer</string>
    <string name="dieuwrine">Nom dieuwrine</string>
    <string name="adiya">Total adiya present dans la caisse</string>
    <string name="sass">Total sass present dans la caisse</string>
    <string name="social">Total social present dans la caisse</string>
    <string name="personalInfo">Informations personnelles</string>
    <string name="AddCommissionInstruction">Lister les commissions de votre dahira en fournissant le nom de la commission et le responsable. Repetez autant de fois necessaire cette procedure.</string>
    <string name="updateCommission">Pour modifier ou supprimer une commission deja ajoutee, faites un appuis long la dessus.</string>
    <string name="backButton">Precedent</string>
    <string name="textView_commissionsTitle">Commissions</string>
    <string name="textView_responsiblesTitle">Responsable</string>
    <string name="buttonVerifyEmail">Cliquez ici pour verifier votre email</string>
    <string name="textView_labelPhoneNumber">Telephone:</string>
    <string name="textView_labelAddress">Adresse:</string>
    <string name="updatePhoneNumber">Telephone</string>
    <string name="totalAdiya">Total Adiya</string>
    <string name="totalSass">Total sass</string>
    <string name="totalSocial">Total Social</string>
    <string name="userName">Nom</string>
    <string name="adiyaVerse">Adiya verse</string>
    <string name="sassVerse">Sass verse</string>
    <string name="socialVerse">Social verse</string>
    <string name="labelCommission">Commission</string>
    <string name="cancel">Annuler les changements</string>
    <string name="textView_labelLogo">Cliquez sur la photo pour choisir un logo</string>
    <string name="btn_updateCommission">Eneregistrer</string>
    <string name="btn_deleteCommission">Supprimer</string>
    <string name="textView_or">OU</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_cancel">Annuler</string>
    <string name="editText_dialogEmail">Adresse email du membre</string>
    <string name="changeLogo">Cliquez sur la photo pour changer votre logo</string>
    <string name="changeProfilePhoto">Cliquez sur la photo pour changer votre photo de profile</string>
    <string name="search">Rechercher</string>
    <string name="textView_labelEmail">Adresse email:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rechercher">Rechercher</string>
    <string name="ok">OK</string>
    <string name="offline_used">Vous pouvez utiliser l\'application Jotaayou Mouride sans posséder un compte dans l\'application. Mais la seule ressource qui sera disponible pour vous est d\'écouter des sons religieux tels que les Khassaide et le Coran disponible dans la page de l\'accueil.</string>
    <string name="login_sign_in_description">“Rien n’est plus simple que de s\'inscrire dans cette application. Juste cliquez sur SE CONNECTER en haut a votre droit. Entrez votre numéro de téléphone, attendez le code de validation, entrez votre code et continuez. A la page suivante, suivez les instructions et enregistrez vos informations personnelle.</string>
    <string name="create_dahira_description">Si vous êtes administrateur de votre dahira c\'est à dire le gestionnaire de votre dahira, vous devez d’abord créer votre dahira et l\'enregistrer dans l\'application. Pour se faire, naviguez sur le menu en haut a votre gauche et cliquez sur CREER UN NOUVEAU DAHIRA. Dans la page suivante, choisissez un logo de votre dahira si disponible, sinon vous pouvez utiliser le logo déjà propose. Remplir le formulaire et cliquez sur SUIVANT. Dans la page suivante, complétez le second formulaire si nécessaire et cliquez sur TERMINER LA CREEATION DE MON DAHIRA. C\'est fini yeahhhh! Votre dahira est désormais disponible dans la base de données. Congratulations!</string>
    <string name="add_member_description">Attention ! seuls les membres désignés comme administrateur peuvent ajouter, modifier ou supprimer un membre. Pour ajouter un membre, assurez-vous que la personne s\'est d\'abord inscrite dans l\'application Jotaayou Mouride. Naviguez sur le MENU, cliquez sur MES DAHIRA, selectionnez le dahira dont vous êtes administrateur, cliquez encore sur le MENU puis et en fin, cliquez sur AJOUTER UN NOUVEAU MEMBRE. Sur la petite fenêtre qui s\'ouvre, entrez le NUMERO DE TELEPHONE ou l\'ADRESSE EMAIL du membre que vous voulez ajouter puis cliquez sur AJOUTER. Et c\'est fini!</string>
    <string name="add_cotisation_description" tools:ignore="Typos">Seuls les membres designes comme administrateur peuvent ajouter une cotisation. Pour se faire, naviguez sur le MENU, MES DAHIRAS, selectionnez le dahira correspondant, naviguez encore sur le MENU, VOIR LES MEMBRES et selectionnez le membre correspondant, naviguez encore sur le MENU puis AJOUTER(ADIYA, SASS, SOCIAL). Dans la nouvelle page qui s\'ouvre, choisir une date, entrez le montant de la cotisation et selectionnez le type de la cotisation (Adiya, Sass ou Social) puis ENREGISTRER. NB: Toute cotisation enregistrer sera ajoutee automatiquement dans la caisse du dahira. Ainis on aura la somme presente de la caisse a temps reel.</string>
    <string name="add_depa_description">Seuls les membres désignés comme administrateur peuvent ajouter des évènements, des photos ou des audios. Pour se faire, naviguez sur MENU, MES DAHIRAS, sélectionnez votre dahira, sélectionnez l\'élément souhaiter puis remplir les formulaires ou suivez les instructions proposées.</string>
    <string name="send_announcement_description">Toute personne membre d\'un dahira peut envoyer une annonce vocale ou ecrite qui sera visible pour tous les membres de ce dahira. Pour se faire, naviguez sur MENU, MES DAHIRAS, selectionnez votre dahira, naviguez encore sur le MENU puis AJOUTER UNE ANNONCE. Selectionnez l\'image vocale ou ecrite puis enregistrer et envoyer votre annonce.</string>
    <string name="other_functions_description">Toutes autres fonctionnalités peuvent être consultées par un membre d\'un dahira donne. Assurez-vous d\'être ajouté en tant que membre du dahira par l\'administrateur du dahira si ce dernier est crée et enregistre dans l\'app. Vous pouvez trouver le contact d\'un dahira facilement en navigant sur le menu puis tous les dahira ou bien rechercher le dahira en entrant son nom puis l\'appeler directement via l\'application.</string>
    <string name="add_admin_description">Seuls un administrateur peut désigner un autre membre comme administrateur. Pour se faire, naviguez sur MENU, MES DAHIRAS, sélectionnez votre dahira, naviguez encore sur MENU, VOIR LES MEMBRES et cliquez sur le membre que tu veux designer comme administrateur. Dans la page personnelle de ce membre, naviguez sur MENU puis cliquez sur MODIFIER CE MEMBRE en bas du menu et faite la modification souhaitée (designer ce membre comme administrateur, supprimer ce membre ou bien l\'attribuer à une commission).</string>
    <string name="quit_modify_dahira_description">Pour modifier ou se désabonner d\'un dahira, naviguez sur MENU, MES DAHIRAS, sélectionnez votre dahira, naviguez encore sur MENU, sélection MODIFIER MON DAHIRA ou QUITTER CE DAHIRA en bas du menu et suivez les instructions.</string>
    <string name="photo">photo</string>
    <string name="khidmatoul_khadim">Khidmatoul Khadim</string>
    <string name="dieuwrine_name">Dieuwrine: Serigne Bassirou Ndiaye</string>
    <string name="example_771866656">771866656</string>
    <string name="example_address">Parcelles Assainies Unite 05</string>
    <string name="example_nbr_members">100 membres inscris</string>
    <string name="_2_inscription_et_connexion">2 - Inscription et Connexion:</string>
    <string name="intruction_tilte">Si vous avez des questions, des remarques ou des suggetions, envoyez un message vocal WhatSapp a Cheikh Mbacke Fall sur +1 (320) 803–0902</string>
    <string name="intructions">Intructions</string>
    <string name="instruction_video">Cliquez ici pour voir les instructions en video</string>
    <string name="_1_utiliser_l_app_sans_se_connecter">1 - Utiliser l\'app sans se connecter:</string>
    <string name="_3_creer_un_dahira">3 - Creer un Dahira:</string>
    <string name="_4_ajouter_un_membre_dans_votre_dahira_dahira">4 - Ajouter un membre dans votre dahira Dahira:</string>
    <string name="_5_Designer_un_admin">5 - Designer un membre comme administrateur ou modifier ses donnees (supprimer le membre ou l\'attribuer a une commission):</string>
    <string name="_6_enregister_une_cotisation">6 - Enregister une cotisation (Adiya, Sass ou Social) pour un membre:</string>
    <string name="_7_enregister_depenses_evenements_photos_ou_audios">7 - Enregister depenses, evenements, photos ou audios:</string>
    <string name="_8_envoyer_une_annonce">8 - Envoyer une annonce:</string>
    <string name="_9_autres_fonctionnalitees">9 - Autres fonctionnalitees:</string>
    <string name="_10_modifier_ou_se_desabonner_d_un_dahira">10 - Modifier ou Se Desabonner d\'un dahira:</string>
    <string name="se_connecter">Se connecter</string>
    <string name="rechercher_un_dahira">Rechercher un dahira</string>
    <string name="rechercher_un_membre">Rechercher un membre</string>
    <string name="instructions">Instructions</string>
    <string name="about_menu">A propos</string>
</resources>