<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:title="@string/se_connecter"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/icon_add"
        android:visible="false"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/icon_back"
        android:visible="false"
        android:icon="@drawable/ic_back"
        app:showAsAction="always" />

    <item
        android:id="@+id/logo"
        android:visible="false"
        android:icon="@mipmap/logo"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_dahira"
        android:icon="@mipmap/logo"
        android:title="@string/rechercher_un_dahira"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_user"
        android:icon="@mipmap/logo"
        android:title="@string/rechercher_un_membre"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/instructions"
        android:title="@string/instructions"
        android:icon="@mipmap/logo"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:icon="@mipmap/logo"
        android:title="@string/about_menu"
        app:showAsAction="never" />

</menu>