<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/photo"
                app:srcCompat="@drawable/logo_dahira" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textview_dahiraName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khidmatoul_khadim"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_dieuwrine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dieuwrine_name" />

                <TextView
                    android:id="@+id/textview_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_771866656" />

                <TextView
                    android:id="@+id/textview_siege"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_address" />

                <TextView
                    android:id="@+id/textView_totalMembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_nbr_members" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>